fixed alignment and font size

--- a/src/components/firstpage/firstpage.css
+++ b/src/components/firstpage/firstpage.css
@@ -2,18 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 .firstpage{width: 100%;display: flex;flex-direction: row;height: 100vh;}
-.content1{width: 55%;height: 100%;display: flex;flex-direction: column;font-family: 'Nunito Sans', sans-serif;color: #646464;}
-.headerfp{width: 100%;height: 10%;display: flex;flex-direction: row;}
-.headerfp p{font-family: 'Architects Daughter', cursive;color: #A171AA;font-size: 35px;margin: 3% 0%;}
-.logo1{width: 4.7%;height: 56.4%;margin: 3% 1% 0% 4%;}
-.heading1{font-family: 'Architects Daughter', cursive;color: #727272;font-size: 58px;margin: 4% 0% 0%12%;}
-.subhead{color: #646464;font-family: 'Nunito Sans', sans-serif;margin:3% 12%;font-size: 24px;width: 68%;}
-.nameinput{width: 43%;margin:3% 12%;padding:5px 15px;font-size: 20px;border: 1.8px solid #878788;font-weight: normal;}
+.content1{width: 50%;height: 100%;display: flex;flex-direction: column;font-family: 'Nunito Sans', sans-serif;color: #646464;}
+.headerfp{width: 100%;height: 10%;display: flex; align-items: center;}
+.headerfp p{font-family: 'Architects Daughter', cursive;color: #A171AA;font-size: 30px; margin: 0 10px;}
+.logo1{width: 4.7%;height: 56.4%; margin-left: 20px;}
+.heading1{font-family: 'Architects Daughter', cursive;color: #727272;font-size: 50px;margin: 4% 0% 0%12%;}
+.subhead{color: #646464;font-family: 'Nunito Sans', sans-serif;margin:3% 12%;font-size: 18px;width: 68%;}
+.nameinput{width: 43%;margin:3% 12%;padding:5px 15px;font-size: 18px;border: 1.8px solid #878788;font-weight: normal;}
 .devline{border: none;border-bottom: 1.5px solid  #878788;width: 65%;margin: 0.5% 12%;}
-.room{margin: 2% 0% 0% 12%;color: #9767A1;font-weight: bold;font-size: 19px;}
-.or{margin: 1% 12%;font-weight: bold;font-size: 21px;color: #868687;}
-.linkcont{display: flex;flex-direction: row;}
-.linkinput{width: 43%;margin:1.5% 2% 0% 12%;padding:5px 15px;font-size: 20px;border: 1.8px solid #878788;font-weight: normal;}
-.entbtn{background-color: #A171AA ;color: white;width: 15%;margin: 1.5% 0%;border: none;outline: none;height: 75%;font-size: 20px;}
-.image{display: flex;width: 45%;height: 100%;}
-.lolimg{height: 85%;margin: 11% 0% 0% 0% ;width: 85%;transform: translateX(-4%);}
+.room{margin: 2% 0% 0% 12%;color: #9767A1;font-weight: bold;font-size: 18px;}
+.or{margin: 1% 12%;font-weight: bold;font-size: 18px;color: #868687;}
+.linkcont{display: flex;}
+.linkinput{width: 43%;margin:1.5% 2% 0% 12%;padding:5px 15px;font-size: 18px;border: 1.8px solid #878788;font-weight: normal;}
+.entbtn{background-color: #A171AA ;color: white;width: 15%;margin: 1.5% 0%;border: none;outline: none;height: 75%;font-size: 18px;}
+.entbtn:hover {background-color: #97669D; cursor: pointer;}
+.image{display: flex;width: 50%;height: 100%;}
+.lolimg{height: 80%;margin: auto; width: 80%;}
+
+@media(max-width: 950px){
+    .heading1{font-size: 40px;}
+}
